@@ -1,3 +1,7 @@
+2005-10-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/font-config.cc (init_fontconfig): resurrect mf/out/ check.
+	
 2005-10-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* stepmake/stepmake/script-vars.make (PYTHON_SCRIPTS_IN): Oops.  Add.
